# wasm-rust-go-asc

./: README.md  index.html  start.sh
asc/: asconfig.json  build.sh  index.html  package-lock.json  package.json
asc/assembly/: index.ts
go/: .gitignore  build.sh  go.mod  index.html  index.js  main.go  wasm_exec.js
js/: index.html  index.js
rust/: .gitignore  Cargo.toml  build.sh  publish.sh
rust/.cargo/: config.toml
rust/src/: lib.rs
rust/wasm-app-www/: LICENSE-APACHE  index.html  index.js  package-lock.json  package.json
