[package]
name = "wasm-zkpp"
version = "0.1.0"
authors = ["Sebastian Scheibe <sebastian@ecostack.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
wasm-bindgen = "0.2.83"
wee_alloc = "0.4.5"

[profile.release]
opt-level = 3
lto = "fat"
